--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DSA_Algorithm)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(DSA_Algorithm src/main.cpp)
+add_executable(DSA_Algorithm src/main.cpp src/Bob.cpp hdr/Bob.h src/Alice.cpp hdr/Alice.h)
